--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"version": "1.0.0",
 	"description": "Gulp starter template for website development.",
 	"main": "index.js",
-	"scripts": {},
+	"scripts": {
+		"prepare": "husky"
+	},
 	"browserslist": [
 		">0.3%",
 		"last 2 versions",
@@ -15,7 +17,14 @@
 		"email": "stolbov.v@outlook.com",
 		"url": "https://github.com/stolbovvv"
 	},
-	"license": "ISC",
+	"lint-staged": {
+		"*.{js,mjs}": [
+			"eslint --fix"
+		],
+		"*.css": [
+			"stylelint --fix"
+		]
+	},
 	"devDependencies": {
 		"@babel/core": "^7.25.2",
 		"@babel/eslint-parser": "^7.25.1",
@@ -23,6 +32,8 @@
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
+		"husky": "^9.1.4",
+		"lint-staged": "^15.2.8",
 		"prettier": "^3.3.3",
 		"stylelint": "^16.8.1",
 		"stylelint-config-standard": "^36.0.1",
